tests/NormalTests/paczka1/fuzzy1/68644015.err
Error in line 6: oO7JdQGxUSM A209 12,7
Error in line 5: fD2h S529 78,6
Error in line 10: hf1h A209 53,8
Error in line 16: hf1h A49 28,7
Error in line 22: 5aXT1X0q S326 49,5
Error in line 26: 5aXT1X0q A209 20,3
Error in line 28: 5aXT1X0q S529 91,7
Error in line 7: S326 S529 82,9
Error in line 37: S326 S326 45,3
Error in line 34: 5aXT1X0q A209 38,0
